stage-refactoring - fixed message word-wrap

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,5 +1,5 @@
 .header {
-    padding: 35px 20px;
+    padding: 25px 20px;
     margin: 0 0 5px;
     border-top: none;
 
